--- a/florify-frontend/index.html
+++ b/florify-frontend/index.html
@@ -1,14 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Florify - Authentication</title>
+
+    <!-- Add the CSS file directly in HTML -->
+    <link rel="stylesheet" href="/src/styles/auth.css">
+
+    <!-- Or if using public folder -->
+    <!-- <link rel="stylesheet" href="/styles/auth.css"> -->
+</head>
+<body>
     <div id="root"></div>
+
+    <!-- For Vite -->
     <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+    <!-- OR for Parcel/Webpack with HTML entry -->
+    <!-- <script type="module" src="/src/index.jsx"></script> -->
+</body>
 </html>
